Update reset.css and style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,57 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #333;
   font-family: sans-serif;
   font-size: 10px;
 }
 
+nav {
+  background-color: #000;
+  margin: 0 auto;
+  padding: 15px 0 15px 15px;
+  position: fixed;
+  width: 420px;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 1.3em;
+  padding-bottom: 1%;
+
+}
+
+.arrow {
+  /* background-color: yellow; */
+  width: 8%;
+  float: right;
+  padding-top: 1.5%;
+}
+
 .container {
+  background-color: #dadada;
   margin: 0 auto;
   width: 420px;
 }
 
-nav {
-  margin: 0 auto;
-  padding: 10px 0 15px 15px;
-  position: fixed;
-  width: 420px;
+.content {
+  /* background-color: blue; */
+  width: 90%;
+  margin-left: 5%;
+  font-size: 1.3em;
+}
+
+.location {
+  display: inline-flex;
+  padding: 5% 0;
+  width: 100%;
+  border: .5px solid #000;
+}
+
+.location:hover {
+  background-color: #969696;
 }
 
 .restaurant-list {
